--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
 
-  <h1>
-    {{ title }}
-  </h1>
-  <app-heroes></app-heroes>
+<div style="text-align:center">
   
+  <h1 >{{title}}</h1>
+  <registration-detail></registration-detail>
+    
+  
+ </div>
+
+
+
+
+
+
+
